Add missing include directory.

--- a/src/modules/pcibus/CMakeLists.txt
+++ b/src/modules/pcibus/CMakeLists.txt
@@ -1,1 +1,3 @@
+include_directories(.)
+
 add_kernel_component(pcibus_mod pcibus_mod.cpp ../../devices/network/ne2000_pci/ne2k.cpp ../../devices/graphics/bochs_emu/bga.cpp)
