--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -129,9 +129,9 @@ macro(set_build_for_target)
 endmacro()
 
 # Generate a named component file from given sources.
-# Syntax: add_component(name sources [LINK_SCRIPT script_name] [LIBS lib_targets])
+# Syntax: add_component(name sources [NOT_RELOC] [LINK_SCRIPT script_name] [LIBS lib_targets])
 macro(add_component name)
-	cmake_parse_arguments(AC "" "LINK_SCRIPT" "LIBS" ${ARGN})
+	cmake_parse_arguments(AC "NOT_RELOC" "LINK_SCRIPT" "LIBS" ${ARGN})
 	#message("These should be the sources: ${AC_UNPARSED_ARGUMENTS}")
 	#message("These should be the libs: ${AC_LIBS}")
 	set(sources "${AC_UNPARSED_ARGUMENTS}")
@@ -144,14 +144,20 @@ macro(add_component name)
 
     #add_custom_command(COMMAND nm )
 
-    # Components are relocatable (-r)
+    set(_link_flags)
+    if (NOT AC_NOT_RELOC)
+	    # Components are relocatable (-r)
+    	set(_link_flags "-r")
+    endif()
     if (NOT PLATFORM STREQUAL "hosted")
     	if (AC_LINK_SCRIPT)
-	        set_property(TARGET ${name} PROPERTY LINK_FLAGS "-r -Wl,-T,${AC_LINK_SCRIPT} -Wl,-Map,${name}.map")
+    		set(_link_flags "${_link_flags} -Wl,-T,${AC_LINK_SCRIPT}")
         else (AC_LINK_SCRIPT)
-	        set_property(TARGET ${name} PROPERTY LINK_FLAGS "-r -Wl,-T,${CMAKE_SOURCE_DIR}/modules/component.lds -Wl,-Map,${name}.map")
+    		set(_link_flags "${_link_flags} -Wl,-T,${CMAKE_SOURCE_DIR}/modules/component.lds")
         endif (AC_LINK_SCRIPT)
+	    set(_link_flags "${_link_flags} -Wl,-Map,${name}.map")
     endif ()
+    set_property(TARGET ${name} PROPERTY LINK_FLAGS ${_link_flags})
 endmacro()
 
 macro(add_kernel_component)
