Fix some missing cmake dependencies.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -128,6 +128,11 @@ macro(set_build_for_target)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${KERNEL_LINK_FLAGS}")
 endmacro()
 
+# This target is needed so it can depend on components we build.
+# It's defined here because add_component() below needs it.
+add_custom_target(init_image
+	DEPENDS ${CMAKE_BINARY_DIR}/init.img)
+
 # Generate a named component file from given sources.
 # Syntax: add_component(name sources [NOT_RELOC] [LINK_SCRIPT script_name] [LIBS lib_targets])
 macro(add_component name)
@@ -141,8 +146,6 @@ macro(add_component name)
     	target_link_libraries(${name} "${AC_LIBS}")
     endif()
     set_target_properties(${name} PROPERTIES OUTPUT_NAME ${name}.comp)
-
-    #add_custom_command(COMMAND nm )
 
     set(_link_flags)
     if (NOT AC_NOT_RELOC)
@@ -158,6 +161,9 @@ macro(add_component name)
 	    set(_link_flags "${_link_flags} -Wl,-Map,${name}.map")
     endif ()
     set_property(TARGET ${name} PROPERTY LINK_FLAGS ${_link_flags})
+
+    # This is a bit extreme - not all components may be part of the init.img
+    add_dependencies(init_image ${name})
 endmacro()
 
 macro(add_kernel_component)
@@ -217,7 +223,7 @@ add_subdirectory(nucleus)
 
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/init.img
     COMMAND buildboot ${CMAKE_BINARY_DIR}/ ${CMAKE_SOURCE_DIR}/kernel/platform/${PLATFORM}/bootimage.lst ${CMAKE_BINARY_DIR}/init.img
-	DEPENDS launcher nucleus) # FIXME: some more deps missing!! ninja metta will not build all
+	DEPENDS launcher nucleus)
 
 add_custom_command(OUTPUT metta.iso
     COMMAND sh ${CMAKE_SOURCE_DIR}/tools/mkbootimg/images.sh ${CMAKE_BINARY_DIR}
