--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -12,3 +12,5 @@ add_subdirectory(hashtables_mod)
 add_subdirectory(stretch_table_mod)
 add_subdirectory(exceptions_mod)
 add_subdirectory(pcibus)
+
+set(all_init_components "${all_init_components}" PARENT_SCOPE)
