Start adding back unit tests.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,3 +4,4 @@ find_package(Boost REQUIRED COMPONENTS unit_test_framework)
 
 # Use create_test() framework...
 add_executable(slebtest slebtest.cpp)
+add_executable(test_bit_array test_bit_array.cpp)
