Build tools using locally installed llvm toolchain and via llvm detection snippet from Building LLVM with CMake page.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -93,7 +93,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
 set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} -stdlib=libc++")
 
 # Host environment flags.
-set(TOOLS_CXX_FLAGS "-emit-llvm -O4")
+set(TOOLS_CXX_FLAGS "-emit-llvm -O4 -fno-rtti")
 set(TOOLS_DEFINES "")
 set(TOOLS_LINK_FLAGS "-O4")
 
