Cleanup code style.

--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -1,6 +1,7 @@
 set_build_for_target()
 
-include_directories(${CMAKE_SOURCE_DIR}/interfaces ${CMAKE_BINARY_DIR}/interfaces ${CMAKE_BINARY_DIR}/interfaces/nemesis)
+include_directories(${CMAKE_SOURCE_DIR}/interfaces ${CMAKE_BINARY_DIR}/interfaces
+	${CMAKE_BINARY_DIR}/interfaces/nemesis)
 
 add_library(debugger STATIC
 	arch/${ARCH}/panic.cpp
@@ -17,7 +18,7 @@ add_library(kernel STATIC
 	arch/shared/bootinfo.cpp)
 
 add_library(platform STATIC
-	platform/${PLATFORM}/multiboot.cpp
 	generic/console.cpp
 	platform/shared/null_console.cpp
+	platform/${PLATFORM}/multiboot.cpp
 	platform/${PLATFORM}/default_console.cpp)
