Add UEFI x86_64 config to launcher build.

--- a/src/launcher/CMakeLists.txt
+++ b/src/launcher/CMakeLists.txt
@@ -1,6 +1,9 @@
 set_build_for_target()
 
-include_directories(. ${CMAKE_SOURCE_DIR}/nucleus/x86 ${CMAKE_SOURCE_DIR}/modules/tcb/root_domain ${CMAKE_SOURCE_DIR}/interfaces ${CMAKE_BINARY_DIR}/interfaces)
+include_directories(. ${CMAKE_SOURCE_DIR}/nucleus/${ARCH}
+    ${CMAKE_SOURCE_DIR}/modules/tcb/root_domain
+    ${CMAKE_SOURCE_DIR}/interfaces
+    ${CMAKE_BINARY_DIR}/interfaces)
 
 # Initial loader.
 # Initial loader provides boot sequence abstraction for the kernel.
@@ -16,15 +19,38 @@ include_directories(. ${CMAKE_SOURCE_DIR}/nucleus/x86 ${CMAKE_SOURCE_DIR}/module
 # The rest of the loading is done by the root domain.
 ################################################################################################
 
+set(LAUNCHER_SRC
+    loader.cpp)
+
+if (PLATFORM STREQUAL "pc99")
+    list(APPEND LAUNCHER_SRC
+        pc99/loader.nasm
+        pc99/loader-ia32.cpp
+        pc99/loader-multiboot.cpp
+        pc99/multiboot-ia32.cpp)
+    set(LAUNCHER_LDSCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/pc99/launcher.lds)
+endif (PLATFORM STREQUAL "pc99")
+
+if (PLATFORM STREQUAL "uefi")
+    list(APPEND LAUNCHER_SRC
+        uefi/loader-uefi.cpp)
+    set(LAUNCHER_LDSCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/uefi/launcher.lds)
+endif (PLATFORM STREQUAL "uefi")
+
+if (ARCH STREQUAL "x86")
+    list(APPEND LAUNCHER_SRC
+        x86/startup.cpp
+        ../kernel/arch/x86/bootinfo.cpp
+        ../kernel/arch/x86/continuation.nasm)
+endif (ARCH STREQUAL "x86")
+
+if (ARCH STREQUAL "x86_64")
+    list(APPEND LAUNCHER_SRC
+        x86_64/startup.cpp)
+endif (ARCH STREQUAL "x86")
+
 add_component(launcher
-    pc99/loader.nasm
-    pc99/loader-ia32.cpp
-    pc99/loader-multiboot.cpp
-    pc99/multiboot-ia32.cpp
-    loader.cpp
-    x86/startup.cpp
-    ../kernel/arch/x86/bootinfo.cpp
-    ../kernel/arch/x86/continuation.nasm
+    ${LAUNCHER_SRC}
     NOT_RELOC # Launcher is not relocatable.
-    LINK_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/pc99/launcher.lds
+    LINK_SCRIPT ${LAUNCHER_LDSCRIPT}
     LIBS common platform kernel runtime debugger interfaces cxx)
