--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -90,9 +90,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
 set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} -stdlib=libc++")
 
 # Host environment flags.
-set(TOOLS_CXX_FLAGS "-emit-llvm -O4 -fno-rtti")
+set(TOOLS_CXX_FLAGS "-O3 -fno-rtti")
 set(TOOLS_DEFINES "")
-set(TOOLS_LINK_FLAGS "-O4")
+set(TOOLS_LINK_FLAGS "-O3")
 
 # Clang invocations debug
 #set(CMAKE_CXX_FLAGS "-v ${CMAKE_CXX_FLAGS}")
