Set linker script filename directly not via gcc driver. Map output unsupported.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -144,11 +144,12 @@ macro(add_component name)
     endif()
     if (NOT PLATFORM STREQUAL "hosted")
     	if (AC_LINK_SCRIPT)
-    		set(_link_flags "${_link_flags} -Wl,-T,${AC_LINK_SCRIPT}")
+    		set(_link_flags "${_link_flags} -T ${AC_LINK_SCRIPT}")
         else (AC_LINK_SCRIPT)
-    		set(_link_flags "${_link_flags} -Wl,-T,${CMAKE_SOURCE_DIR}/modules/component.lds")
+    		set(_link_flags "${_link_flags} -T ${CMAKE_SOURCE_DIR}/modules/component.lds")
         endif (AC_LINK_SCRIPT)
-	    set(_link_flags "${_link_flags} -Wl,-Map,${name}.map")
+	# unsupported in lld 
+        #set(_link_flags "${_link_flags} -Map ${name}.map")
     endif ()
     get_property(all_link_flags TARGET ${name} PROPERTY LINK_FLAGS)
     set_property(TARGET ${name} PROPERTY LINK_FLAGS "${all_link_flags} ${_link_flags}")
