--- a/src/tools/mettafs/CMakeLists.txt
+++ b/src/tools/mettafs/CMakeLists.txt
@@ -2,7 +2,7 @@ set_build_for_host()
 
 find_library(UUID_LIBRARY uuid PATHS /usr/local/opt/ossp-uuid/lib)
 mark_as_advanced(UUID_LIBRARY)
-include_directories(/usr/local/opt/ossp-uuid/includes)
+include_directories(/usr/local/opt/ossp-uuid/includes ${OPENSSL_INCLUDE_DIR})
 
 include_directories(${CMAKE_SOURCE_DIR}/kernel/arch/x86) # fourcc.h
 
